--- a/gbif-metadata-profile/trunk/pom.xml
+++ b/gbif-metadata-profile/trunk/pom.xml
@@ -14,7 +14,8 @@
   <packaging>jar</packaging>
 
   <name>GBIF Common :: Metadata profile</name>
-  <description>Model and serialization utilities for the GBIF metadata profile</description>
+  <description>Model and serialization utilities for the GBIF metadata profile
+    found at http://rs.gbif.org/schema/eml-gbif-profile/</description>
   <url>http://sites.gbif.org/common-resources/gbif-metadata-profile</url>
 
   <properties>
