--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
     <commons-digester.version>2.1</commons-digester.version>
     <commons-io.version>2.4</commons-io.version>
     <freemarker.version>2.3.19</freemarker.version>
-    <gbif-common.version>0.9</gbif-common.version>
+    <gbif-common.version>0.10-SNAPSHOT</gbif-common.version>
     <guava.version>13.0.1</guava.version>
-    <junit.version>4.10</junit.version>
+    <junit.version>4.11</junit.version>
     <slf4j.version>1.7.2</slf4j.version>
   </properties>
 
