--- a/gbif-metadata-profile/trunk/pom.xml
+++ b/gbif-metadata-profile/trunk/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.gbif</groupId>
   <artifactId>gbif-metadata-profile</artifactId>
-  <version>1.0.2.4-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>GBIF Common :: Metadata profile</name>
@@ -21,11 +21,11 @@
   <properties>
     <commons-digester.version>2.1</commons-digester.version>
     <commons-io.version>2.4</commons-io.version>
-    <freemarker.version>2.3.19</freemarker.version>
-    <gbif-common.version>0.10-SNAPSHOT</gbif-common.version>
-    <guava.version>13.0.1</guava.version>
+    <freemarker.version>2.3.20</freemarker.version>
+    <gbif-common.version>0.16</gbif-common.version>
+    <guava.version>14.0.1</guava.version>
     <junit.version>4.11</junit.version>
-    <slf4j.version>1.7.2</slf4j.version>
+    <slf4j.version>1.7.7</slf4j.version>
   </properties>
 
   <scm>
@@ -89,7 +89,7 @@
     <dependency>
       <groupId>org.gbif</groupId>
       <artifactId>gbif-common</artifactId>
-      <version>0.10</version>
+      <version>${gbif-common.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
