--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <url>http://sites.gbif.org/common-resources/gbif-metadata-profile</url>
 
   <properties>
-    <commons-digester.version>2.1</commons-digester.version>
+    <commons-digester3.version>3.2</commons-digester3.version>
     <commons-io.version>2.4</commons-io.version>
     <freemarker.version>2.3.20</freemarker.version>
     <gbif-common.version>0.16</gbif-common.version>
@@ -61,9 +61,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>commons-digester</groupId>
-      <artifactId>commons-digester</artifactId>
-      <version>${commons-digester.version}</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-digester3</artifactId>
+      <version>${commons-digester3.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
