--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <guava.version>14.0.1</guava.version>
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.7</slf4j.version>
+    <jsr305.version>3.0.0</jsr305.version>
   </properties>
 
   <scm>
@@ -95,6 +96,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
+    </dependency>
+    <!-- Annotations -->
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>${jsr305.version}</version>
     </dependency>
   </dependencies>
 </project>
