--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.7</slf4j.version>
     <jsr305.version>3.0.0</jsr305.version>
+    <jsoup.version>1.8.1</jsoup.version>
   </properties>
 
   <scm>
@@ -96,6 +97,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
+    </dependency>
+    <!-- Java HTML Parser to conveniently extract license url and title from rights statement -->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>${jsoup.version}</version>
     </dependency>
     <!-- Annotations -->
     <dependency>
