Updates pom, now that project is hosted on GitHub

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <version>10</version>
   </parent>
 
-  <groupId>org.gbif</groupId>
   <artifactId>gbif-metadata-profile</artifactId>
   <version>1.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -16,7 +15,7 @@
   <name>GBIF Common :: Metadata profile</name>
   <description>Model and serialization utilities for the GBIF metadata profile
     found at http://rs.gbif.org/schema/eml-gbif-profile/</description>
-  <url>http://sites.gbif.org/common-resources/gbif-metadata-profile</url>
+  <url>https://github.com/gbif/${project.artifactId}</url>
 
   <properties>
     <commons-digester3.version>3.2</commons-digester3.version>
@@ -31,28 +30,11 @@
   </properties>
 
   <scm>
-    <connection>scm:svn:http://gbif-common-resources.googlecode.com/svn/gbif-metadata-profile/trunk</connection>
-    <developerConnection>scm:svn:https://gbif-common-resources.googlecode.com/svn/gbif-metadata-profile/trunk</developerConnection>
-    <url>http://code.google.com/p/gbif-common-resources/source/browse/#svn/gbif-metadata-profile/trunk</url>
+    <connection>scm:git:git@github.com:gbif/${project.artifactId}.git</connection>
+    <url>https://github.com/gbif/${project.artifactId}</url>
+    <developerConnection>scm:git:git@github.com:gbif/${project.artifactId}.git</developerConnection>
+    <tag>HEAD</tag>
   </scm>
-
-  <issueManagement>
-    <system>Google Code</system>
-    <url>http://code.google.com/p/gbif-common-resources/issues/list</url>
-  </issueManagement>
-
-  <ciManagement>
-    <system>jenkins</system>
-    <url>http://builds.gbif.org/job/gbif-metadata-profile</url>
-  </ciManagement>
-
-  <distributionManagement>
-    <site>
-      <id>gbif-site</id>
-      <name>Site for the project</name>
-      <url>scp://tools.gbif.org:/var/www/html/sites/common-resources/gbif-metadata-profile</url>
-    </site>
-  </distributionManagement>
 
   <repositories>
     <repository>
