--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
   <url>https://github.com/gbif/${project.artifactId}</url>
 
   <properties>
+    <!-- The IPT depends on this project and so this must stay at java 6 until IPT is upgraded -->
+    <jdkLevel>1.6</jdkLevel>
+
     <commons-digester3.version>3.2</commons-digester3.version>
     <commons-io.version>2.4</commons-io.version>
     <freemarker.version>2.3.20</freemarker.version>
