--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.gbif</groupId>
     <artifactId>motherpom</artifactId>
-    <version>23</version>
+    <version>54</version>
   </parent>
 
   <artifactId>gbif-metadata-profile</artifactId>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>GBIF Common :: Metadata profile</name>
@@ -18,18 +18,15 @@
   <url>https://github.com/gbif/${project.artifactId}</url>
 
   <properties>
-    <!-- The IPT depends on this project and so this must stay at java 6 until IPT is upgraded -->
-    <jdkLevel>1.6</jdkLevel>
-
     <commons-digester3.version>3.2</commons-digester3.version>
-    <commons-io.version>2.4</commons-io.version>
-    <freemarker.version>2.3.22</freemarker.version>
-    <gbif-common.version>0.18</gbif-common.version>
-    <guava.version>18.0</guava.version>
+    <commons-io.version>2.11.0</commons-io.version>
+    <commons-lang.version>3.12.0</commons-lang.version>
+    <freemarker.version>2.3.31</freemarker.version>
+    <gbif-common.version>0.51</gbif-common.version>
     <junit.version>4.12</junit.version>
-    <slf4j.version>1.7.12</slf4j.version>
-    <jsr305.version>3.0.0</jsr305.version>
-    <jsoup.version>1.8.2</jsoup.version>
+    <slf4j.version>1.7.30</slf4j.version>
+    <jsr305.version>3.0.2</jsr305.version>
+    <jsoup.version>1.14.2</jsoup.version>
   </properties>
 
   <scm>
@@ -42,7 +39,7 @@
   <repositories>
     <repository>
       <id>gbif-all</id>
-      <url>http://repository.gbif.org/content/groups/gbif</url>
+      <url>https://repository.gbif.org/content/groups/gbif/</url>
     </repository>
   </repositories>
 
@@ -58,15 +55,15 @@
       <version>${commons-io.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${commons-lang.version}</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>${guava.version}</version>
     </dependency>
     <dependency>
       <groupId>org.freemarker</groupId>
