--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <commons-lang.version>3.12.0</commons-lang.version>
     <freemarker.version>2.3.31</freemarker.version>
     <gbif-common.version>0.51</gbif-common.version>
-    <junit.version>4.12</junit.version>
+    <junit.version>5.8.0</junit.version>
     <slf4j.version>1.7.30</slf4j.version>
     <jsr305.version>3.0.2</jsr305.version>
     <jsoup.version>1.14.2</jsoup.version>
@@ -60,12 +60,6 @@
       <version>${commons-lang.version}</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
       <version>${freemarker.version}</version>
@@ -91,6 +85,14 @@
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
       <version>${jsr305.version}</version>
+    </dependency>
+
+    <!-- Test -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
