--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
   <url>https://github.com/gbif/${project.artifactId}</url>
 
   <properties>
+    <main.basedir>${project.basedir}</main.basedir>
+
     <commons-digester3.version>3.2</commons-digester3.version>
     <commons-io.version>2.11.0</commons-io.version>
     <commons-lang.version>3.12.0</commons-lang.version>
@@ -42,6 +44,15 @@
       <url>https://repository.gbif.org/content/groups/gbif/</url>
     </repository>
   </repositories>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
     <dependency>
