--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
   <name>GBIF Common :: Metadata profile</name>
   <description>Model and serialization utilities for the GBIF metadata profile
-    found at http://rs.gbif.org/schema/eml-gbif-profile/</description>
+    found at https://rs.gbif.org/schema/eml-gbif-profile/</description>
   <url>https://github.com/gbif/${project.artifactId}</url>
 
   <properties>
@@ -24,11 +24,11 @@
     <commons-io.version>2.11.0</commons-io.version>
     <commons-lang.version>3.12.0</commons-lang.version>
     <freemarker.version>2.3.31</freemarker.version>
-    <gbif-common.version>0.52</gbif-common.version>
-    <junit.version>5.8.0</junit.version>
-    <slf4j.version>1.7.30</slf4j.version>
+    <gbif-common.version>0.58</gbif-common.version>
+    <junit.version>5.9.1</junit.version>
+    <slf4j.version>1.7.36</slf4j.version>
     <jsr305.version>3.0.2</jsr305.version>
-    <jsoup.version>1.14.2</jsoup.version>
+    <jsoup.version>1.15.3</jsoup.version>
   </properties>
 
   <scm>
@@ -50,6 +50,7 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
+        <version>${spotless-maven-plugin.version}</version>
       </plugin>
     </plugins>
   </build>
