--- a/gbif-metadata-profile-eml/pom.xml
+++ b/gbif-metadata-profile-eml/pom.xml
@@ -20,6 +20,7 @@
         <commons-io.version>2.11.0</commons-io.version>
         <commons-lang.version>3.12.0</commons-lang.version>
         <freemarker.version>2.3.31</freemarker.version>
+        <gbif-api.version>0.176</gbif-api.version>
         <gbif-common.version>0.58</gbif-common.version>
         <junit.version>5.9.1</junit.version>
         <slf4j.version>1.7.36</slf4j.version>
@@ -28,6 +29,23 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.gbif</groupId>
+            <artifactId>gbif-api</artifactId>
+            <version>${gbif-api.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.gbif</groupId>
+            <artifactId>gbif-common</artifactId>
+            <version>${gbif-common.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-digester3</artifactId>
@@ -47,11 +65,6 @@
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>${freemarker.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.gbif</groupId>
-            <artifactId>gbif-common</artifactId>
-            <version>${gbif-common.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
