--- a/gbif-metadata-profile-eml/pom.xml
+++ b/gbif-metadata-profile-eml/pom.xml
@@ -15,26 +15,14 @@
 
   <name>GBIF Common :: Metadata profile : Ecological Metadata Language (EML)</name>
 
-  <properties>
-    <gbif-api.version>0.177</gbif-api.version>
-    <gbif-common.version>0.58</gbif-common.version>
-    <gbif-parsers.version>0.60</gbif-parsers.version>
-
-    <commons-digester3.version>3.2</commons-digester3.version>
-    <commons-io.version>2.11.0</commons-io.version>
-    <commons-lang.version>3.12.0</commons-lang.version>
-    <freemarker.version>2.3.31</freemarker.version>
-    <junit.version>5.9.1</junit.version>
-    <slf4j.version>1.7.36</slf4j.version>
-    <jsr305.version>3.0.2</jsr305.version>
-    <jsoup.version>1.15.3</jsoup.version>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.gbif</groupId>
+      <artifactId>gbif-metadata-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.gbif</groupId>
       <artifactId>gbif-api</artifactId>
-      <version>${gbif-api.version}</version>
       <exclusions>
         <exclusion>
           <groupId>com.fasterxml.jackson.core</groupId>
@@ -45,12 +33,10 @@
     <dependency>
       <groupId>org.gbif</groupId>
       <artifactId>gbif-common</artifactId>
-      <version>${gbif-common.version}</version>
     </dependency>
     <dependency>
       <groupId>org.gbif</groupId>
       <artifactId>gbif-parsers</artifactId>
-      <version>${gbif-parsers.version}</version>
       <exclusions>
         <exclusion>
           <groupId>org.gbif</groupId>
@@ -60,48 +46,50 @@
     </dependency>
 
     <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-digester3</artifactId>
-      <version>${commons-digester3.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>${commons-io.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>${commons-lang.version}</version>
     </dependency>
     <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
-      <version>${freemarker.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
     </dependency>
     <!-- Java HTML Parser to conveniently extract license url and title from rights statement -->
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
-      <version>${jsoup.version}</version>
     </dependency>
     <!-- Annotations -->
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
-      <version>${jsr305.version}</version>
     </dependency>
 
     <!-- Test -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.gbif</groupId>
+      <artifactId>gbif-metadata-profile-dc</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
