--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,27 @@
   <url>https://github.com/gbif/${project.artifactId}</url>
 
   <modules>
+    <module>gbif-metadata-common</module>
     <module>gbif-metadata-profile-dc</module>
     <module>gbif-metadata-profile-eml</module>
   </modules>
 
   <properties>
     <main.basedir>${project.basedir}</main.basedir>
+
+    <gbif-api.version>0.177</gbif-api.version>
+    <gbif-common.version>0.58</gbif-common.version>
+    <gbif-parsers.version>0.60</gbif-parsers.version>
+
+    <commons-beanutils.version>1.9.4</commons-beanutils.version>
+    <commons-digester3.version>3.2</commons-digester3.version>
+    <commons-io.version>2.11.0</commons-io.version>
+    <commons-lang.version>3.12.0</commons-lang.version>
+    <freemarker.version>2.3.31</freemarker.version>
+    <junit.version>5.9.1</junit.version>
+    <slf4j.version>1.7.36</slf4j.version>
+    <jsr305.version>3.0.2</jsr305.version>
+    <jsoup.version>1.15.3</jsoup.version>
   </properties>
 
   <scm>
@@ -39,6 +54,94 @@
       <url>https://repository.gbif.org/content/groups/gbif/</url>
     </repository>
   </repositories>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.gbif</groupId>
+        <artifactId>gbif-metadata-common</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gbif</groupId>
+        <artifactId>gbif-api</artifactId>
+        <version>${gbif-api.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.gbif</groupId>
+        <artifactId>gbif-common</artifactId>
+        <version>${gbif-common.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gbif</groupId>
+        <artifactId>gbif-parsers</artifactId>
+        <version>${gbif-parsers.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.gbif</groupId>
+            <artifactId>name-parser-v1</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>${commons-beanutils.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-digester3</artifactId>
+        <version>${commons-digester3.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons-lang.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.freemarker</groupId>
+        <artifactId>freemarker</artifactId>
+        <version>${freemarker.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <!-- Java HTML Parser to conveniently extract license url and title from rights statement -->
+      <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>${jsoup.version}</version>
+      </dependency>
+      <!-- Annotations -->
+      <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>${jsr305.version}</version>
+      </dependency>
+
+      <!-- Test -->
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <plugins>
