--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <properties>
     <main.basedir>${project.basedir}</main.basedir>
 
-    <gbif-api.version>1.2.2-eml-2.2.0-SNAPSHOT</gbif-api.version>
+    <gbif-api.version>1.2.2</gbif-api.version>
     <gbif-common.version>0.58</gbif-common.version>
     <gbif-parsers.version>0.60</gbif-parsers.version>
 
